--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,8 @@
     "paths": {
       "~/*": ["./app/*"]
     },
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
 
     // Remix takes care of building everything in `remix build`.
     "noEmit": true
