--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "build": "remix build",
     "dev": "remix dev --manual -c \"pnpm start\"",
     "lint": "npx eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint . --fix ./{app,tests}/**/*.{ts,tsx}",
-    "fmt": "npx prettier --write ./{app,tests}/**/*.{ts,tsx}",
+    "fmt": "npx prettier --write ./{app,tests}/**/*.{ts,tsx} && pnpm dlx prisma format",
     "start": "wrangler pages dev --compatibility-date=2023-06-21 ./public",
     "typecheck": "tsc -b",
     "test": "vitest"
   },
   "dependencies": {
+    "@prisma/client": "^5.11.0",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-slot": "^1.0.2",
@@ -20,6 +21,8 @@
     "@remix-run/cloudflare-pages": "^2.7.2",
     "@remix-run/css-bundle": "^2.7.2",
     "@remix-run/react": "^2.7.2",
+    "@supabase/auth-helpers-remix": "^0.3.0",
+    "@supabase/supabase-js": "^2.39.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "isbot": "^4.1.0",
@@ -27,6 +30,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "reflect-metadata": "^0.2.1",
+    "remix-auth": "^3.6.0",
     "remix-themes": "^1.3.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
@@ -48,7 +52,6 @@
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-drizzle": "^0.2.3",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.33.2",
@@ -57,6 +60,7 @@
     "happy-dom": "^13.4.1",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
+    "prisma": "^5.11.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.1.0",
     "vite": "^5.1.4",
