--- a/package.json
+++ b/package.json
@@ -17,56 +17,59 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-slot": "^1.0.2",
-    "@remix-run/cloudflare": "^2.7.2",
-    "@remix-run/cloudflare-pages": "^2.7.2",
-    "@remix-run/css-bundle": "^2.7.2",
-    "@remix-run/react": "^2.7.2",
+    "@remix-run/cloudflare": "^2.8.1",
+    "@remix-run/cloudflare-pages": "^2.8.1",
+    "@remix-run/css-bundle": "^2.8.1",
+    "@remix-run/react": "^2.8.1",
     "@supabase/auth-helpers-remix": "^0.3.0",
     "@supabase/supabase-js": "^2.39.8",
+    "@tanstack/react-form": "^0.14.0",
+    "@tanstack/valibot-form-adapter": "^0.14.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "isbot": "^4.1.0",
-    "lucide-react": "^0.338.0",
+    "isbot": "^5.1.1",
+    "lucide-react": "^0.358.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "reflect-metadata": "^0.2.1",
     "remix-auth": "^3.6.0",
     "remix-themes": "^1.3.1",
-    "tailwind-merge": "^2.2.1",
+    "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
-    "tsyringe": "^4.8.0"
+    "tsyringe": "^4.8.0",
+    "valibot": "^0.30.0"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20230518.0",
-    "@remix-run/dev": "^2.7.2",
-    "@remix-run/eslint-config": "^2.7.2",
-    "@remix-run/node": "^2.7.2",
+    "@cloudflare/workers-types": "^4.20240314.0",
+    "@remix-run/dev": "^2.8.1",
+    "@remix-run/eslint-config": "^2.8.1",
+    "@remix-run/node": "^2.8.1",
     "@testing-library/dom": "^9.3.4",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.5.2",
-    "@types/react": "^18.2.20",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-tailwindcss": "^3.14.3",
-    "happy-dom": "^13.4.1",
+    "eslint-plugin-tailwindcss": "^3.15.1",
+    "happy-dom": "^13.8.6",
     "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.11",
+    "prettier-plugin-tailwindcss": "^0.5.12",
     "prisma": "^5.11.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.1.0",
-    "vite": "^5.1.4",
-    "vite-tsconfig-paths": "^4.3.1",
-    "vitest": "^1.3.1",
-    "wrangler": "^3.24.0"
+    "typescript": "^5.4.2",
+    "vite": "^5.1.6",
+    "vite-tsconfig-paths": "^4.3.2",
+    "vitest": "^1.4.0",
+    "wrangler": "^3.34.2"
   },
   "engines": {
     "node": ">=18.0.0"
